Rapid development setup complete (live reload, open, watch), also added semi colon support to eslintrc. We need semi-colons :)

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,9 @@
     <title>Koa - recipe - service</title>
 </head>
 <body>
+<div>
+  <h3> Hello there </h3>
+  <div> My first rapid development setup, Who needs some crappy CLI</div>
+</div>
 </body>
 </html>
